# 02155_Project

./: CMakeLists.txt  IsaSim.cpp  readme.md
include/: register.h  simulator.h
src/: main.cpp  simulator.cpp
test/: instruction_tests.cpp  task1_tests.cpp  task2_tests.cpp  task3_tests.cpp  task4_tests.cpp
